# navilos-cmake

./: .gitignore  CMakeLists.txt  Makefile
.config/: defconfig.cmake
.config/toolchain/: arm-none-eabi.cmake  llvm-arm-none-eabi.cmake
App/: CMakeLists.txt  default.ld
App/TestApp/: CMakeLists.txt
App/TestApp/.config/: options.cmake
App/TestApp/include/: ARMv7AR.h
App/TestApp/source/boot/: main.c  startup.S  startup.s
Lib/: CMakeLists.txt
Lib/realview-pb-a8/: CMakeLists.txt
Lib/realview-pb-a8/.config/: options.cmake
Lib/realview-pb-a8/Include/Interface/: HAL_UART.h
Lib/realview-pb-a8/Include/SFR/: pl011.h
Lib/realview-pb-a8/Include/common/: types.h
Lib/realview-pb-a8/Include/sfr/: pl011.h
boot/aarch32/realview-pb-a8/: MemoryMap.h  SYS_MemoryMap.h  default.ld  startup.S
tools/: InstallToolChain.sh
